--- a/HA2.ipynb
+++ b/HA2.ipynb
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1208,7 +1208,31 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 114282 sentence pairs\n",
+      "The shortest english sentence is 2 words\n",
+      "The shortest spanish sentence is 2 words\n",
+      "The longest english sentence is 5 words\n",
+      "The longest spanish sentence is 5 words\n",
+      "\n",
+      "10 Random short sentence pairs:\n",
+      "i hate my boss . \t odio a mi jefe .\n",
+      "tom seems reasonable . \t tom parece razonable .\n",
+      "i want a refund . \t quiero una devolucion .\n",
+      "stop shouting . \t deja de gritar .\n",
+      "what a pity ! \t que lastima !\n",
+      "put down the hammer . \t baja el martillo .\n",
+      "i like to swim . \t me gusta nadar .\n",
+      "this is mahjong . \t esto es mahjongg .\n",
+      "do you understand ? \t comprende ?\n",
+      "i like sandwiches . \t me gustan los sandwiches .\n"
+     ]
+    }
+   ],
    "source": [
     "# load data set\n",
     "lines = open('utils/spa.txt', 'r', encoding='UTF-8').read().strip().split('\\n')\n",
@@ -1262,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1314,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1358,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1406,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1419,7 +1443,15 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tip: the shape of Y should be: (22947, 5, 8805)\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: convert each index number in Y into its corresponding one-hot vector\n",
     "num_output = len(spa_word_to_ix)\n",
@@ -1427,7 +1459,13 @@
     "\n",
     "def Y_to_onehot(Y, num_output):\n",
     "    # Complete function according to description above\n",
-    "    # YOUR CODE HERE"
+    "    n_sentences = len(Y)\n",
+    "    n_words = len(Y[0])\n",
+    "    onehot_matrix = np.zeros((n_sentences, n_words, num_output))\n",
+    "    for i,sentence in enumerate(Y):\n",
+    "        for j,word in enumerate(sentence):\n",
+    "            onehot_matrix[i,j,word] = 1\n",
+    "    return onehot_matrix"
    ]
   },
   {
@@ -1450,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1463,7 +1501,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test passed\n"
+     ]
+    }
+   ],
    "source": [
     "# test case \n",
     "test_Y_to_onehot(Y_to_onehot)"
@@ -1489,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1553,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1573,6 +1619,7 @@
     "from keras.layers import Activation, TimeDistributed, Dense, RepeatVector, Embedding\n",
     "from keras.layers.recurrent import LSTM\n",
     "\n",
+    "#some parts adapted from https://blog.keras.io/a-ten-minute-introduction-to-sequence-to-sequence-learning-in-keras.html\n",
     "def create_model(input_n, X_seq_len, output_n, Y_seq_len, hidden_dim, embedding_dim):\n",
     "    \"\"\" Define a keras sequence-to-sequence model. \n",
     "    \n",
@@ -1593,7 +1640,21 @@
     "    encoder_embedding_layer = Embedding(input_n, embedding_dim, input_length=X_seq_len, mask_zero=True)(encoder_input_layer)\n",
     "    \n",
     "    # Create the encoder LSTM.\n",
-    "    # YOUR CODE HERE\n",
+    "    encoder_layer_output, encoder_hidden_states, encoder_cell_states = LSTM(hidden_dim, \n",
+    "                                                                            activation='tanh',\n",
+    "                                                                            recurrent_activation='hard_sigmoid',\n",
+    "                                                                            kernel_regularizer=None,\n",
+    "                                                                            recurrent_regularizer=None, \n",
+    "                                                                            bias_regularizer=None,\n",
+    "                                                                            activity_regularizer=None,\n",
+    "                                                                            kernel_constraint=None, \n",
+    "                                                                            recurrent_constraint=None,\n",
+    "                                                                            bias_constraint=None, \n",
+    "                                                                            dropout=0.0, \n",
+    "                                                                            recurrent_dropout=0.0,\n",
+    "                                                                            return_state=True,\n",
+    "                                                                            unroll=False)(encoder_embedding_layer)\n",
+    "    encoder_states = [encoder_hidden_states, encoder_cell_states]\n",
     "    \n",
     "    # Null input (should be fed with zeros) and repeating it the same number of times as there are words in the \n",
     "    # target sentence\n",
@@ -1601,7 +1662,20 @@
     "    repeated_null = RepeatVector(Y_seq_len)(null_input)\n",
     "    \n",
     "    # Create the decoder LSTM (feed it with the memory of the encoder network). Call it `decoder_layer`\n",
-    "    # YOUR CODE HERE\n",
+    "    decoder_layer = LSTM(hidden_dim, \n",
+    "                        activation='tanh',\n",
+    "                        recurrent_activation='hard_sigmoid',\n",
+    "                        kernel_regularizer=None,\n",
+    "                        recurrent_regularizer=None, \n",
+    "                        bias_regularizer=None,\n",
+    "                        activity_regularizer=None,\n",
+    "                        kernel_constraint=None, \n",
+    "                        recurrent_constraint=None,\n",
+    "                        bias_constraint=None,\n",
+    "                        dropout=0.0, \n",
+    "                        recurrent_dropout=0.0,\n",
+    "                        return_sequences=True,\n",
+    "                        unroll=False)(repeated_null, initial_state=encoder_states)\n",
     "    \n",
     "    # Add a fully connected layer and a softmax to the outputs of the decoder\n",
     "    decoder_fully_connected = TimeDistributed(Dense(output_n))(decoder_layer)\n",
@@ -1611,7 +1685,9 @@
     "    model = Model([encoder_input_layer, null_input], decoder_softmax)\n",
     "    \n",
     "    # Compile the model. Use a loss function, optimizer, and metrics of your choice\n",
-    "    # YOUR CODE HERE\n",
+    "    model.compile(optimizer='adam',\n",
+    "                  loss='categorical_crossentropy',\n",
+    "                  metrics=['categorical_accuracy'])\n",
     "    \n",
     "    # Add these arguments to the model for convenience\n",
     "    model.hidden_dim = hidden_dim\n",
@@ -1641,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1654,20 +1730,50 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-23dba48f8c3a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mvalidation_percentage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_onehot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidation_percentage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Computing inputs for `create_model`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36mtrain_test_split\u001b[0;34m(*arrays, **options)\u001b[0m\n\u001b[1;32m   2057\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2058\u001b[0m     return list(chain.from_iterable((safe_indexing(a, train),\n\u001b[0;32m-> 2059\u001b[0;31m                                      safe_indexing(a, test)) for a in arrays))\n\u001b[0m\u001b[1;32m   2060\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2061\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m   2057\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2058\u001b[0m     return list(chain.from_iterable((safe_indexing(a, train),\n\u001b[0;32m-> 2059\u001b[0;31m                                      safe_indexing(a, test)) for a in arrays))\n\u001b[0m\u001b[1;32m   2060\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2061\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/sklearn/utils/__init__.py\u001b[0m in \u001b[0;36msafe_indexing\u001b[0;34m(X, indices)\u001b[0m\n\u001b[1;32m    158\u001b[0m                                    indices.dtype.kind == 'i'):\n\u001b[1;32m    159\u001b[0m             \u001b[0;31m# This is often substantially faster than X[indices]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 160\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    161\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindices\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mMemoryError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "validation_percentage = 0.2\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, Y_onehot, test_size=validation_percentage)\n",
+    "\n",
     "# Computing inputs for `create_model`\n",
     "input_n = len(eng_word_to_ix)\n",
     "output_n = len(spa_word_to_ix)\n",
     "X_seq_len = len(X[0])\n",
     "Y_seq_len = Y_onehot.shape[1]\n",
     "\n",
+    "hidden_dim = 256\n",
+    "embedding_dim = 1024\n",
+    "n_epochs = 10\n",
+    "batch_size = 256\n",
+    "\n",
     "# Create the model\n",
-    "# YOUR CODE HERE\n",
+    "model = create_model(input_n, X_seq_len, output_n, Y_seq_len, hidden_dim, embedding_dim)\n",
     "\n",
     "# Train the model (note that you should feed both the input sentence and a zero array with the correct shape to\n",
     "# the `fit` method).\n",
-    "# YOUR CODE HERE\n",
+    "training_history = model.fit(X_train, y_train,\n",
+    "                             epochs=n_epochs,\n",
+    "                             batch_size=batch_size,\n",
+    "                             validation_data=(X_val, y_val)\n",
+    "                             )\n",
+    "\n",
     "model.save_weights('seq2seq_model_correct.hdf5')\n",
     "\n",
     "# If you need, you can use the following line for loading a saved model weights\n",
@@ -1990,7 +2096,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
