correct and validate RNN functionality

--- a/HA2.ipynb
+++ b/HA2.ipynb
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1220,16 +1220,16 @@
       "The longest spanish sentence is 5 words\n",
       "\n",
       "10 Random short sentence pairs:\n",
-      "i hate my boss . \t odio a mi jefe .\n",
-      "tom seems reasonable . \t tom parece razonable .\n",
-      "i want a refund . \t quiero una devolucion .\n",
-      "stop shouting . \t deja de gritar .\n",
-      "what a pity ! \t que lastima !\n",
-      "put down the hammer . \t baja el martillo .\n",
-      "i like to swim . \t me gusta nadar .\n",
-      "this is mahjong . \t esto es mahjongg .\n",
-      "do you understand ? \t comprende ?\n",
-      "i like sandwiches . \t me gustan los sandwiches .\n"
+      "what a strange story ! \t que extrana historia !\n",
+      "the kitten slept soundly . \t el gatito dormia profundamente .\n",
+      "put out your cigarettes . \t apaguen sus cigarrillos !\n",
+      "im not certain . \t no estoy segura .\n",
+      "tom was sweating profusely . \t tom estaba sudando mucho .\n",
+      "tom looks dead . \t tomas parece estar muerto .\n",
+      "i dont doubt you . \t no dudo de ti .\n",
+      "please be polite . \t por favor se educado .\n",
+      "tom was working . \t tom estaba trabajando .\n",
+      "dont underestimate me . \t no me subestimes .\n"
      ]
     }
    ],
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1461,7 +1461,7 @@
     "    # Complete function according to description above\n",
     "    n_sentences = len(Y)\n",
     "    n_words = len(Y[0])\n",
-    "    onehot_matrix = np.zeros((n_sentences, n_words, num_output))\n",
+    "    onehot_matrix = np.zeros((n_sentences, n_words, num_output), dtype=bool)  # using `bool` because Python evaluates `False` as `0` and `True` as `1`, and each element is 1 bit\n",
     "    for i,sentence in enumerate(Y):\n",
     "        for j,word in enumerate(sentence):\n",
     "            onehot_matrix[i,j,word] = 1\n",
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1599,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1638,9 +1638,10 @@
     "    # Input and embedding layers\n",
     "    encoder_input_layer = Input(shape=[X_seq_len])\n",
     "    encoder_embedding_layer = Embedding(input_n, embedding_dim, input_length=X_seq_len, mask_zero=True)(encoder_input_layer)\n",
-    "    \n",
+    "    #encoder_embedding_layer = Embedding(lambda: input_n, lambda: embedding_dim, input_length=lambda: X_seq_len, mask_zero=True)(encoder_input_layer)\n",
+    "\n",
     "    # Create the encoder LSTM.\n",
-    "    encoder_layer_output, encoder_hidden_states, encoder_cell_states = LSTM(hidden_dim, \n",
+    "    encoder_layer_output, encoder_hidden_states, encoder_cell_states = LSTM(hidden_dim, return_state=True,\n",
     "                                                                            activation='tanh',\n",
     "                                                                            recurrent_activation='hard_sigmoid',\n",
     "                                                                            kernel_regularizer=None,\n",
@@ -1652,7 +1653,6 @@
     "                                                                            bias_constraint=None, \n",
     "                                                                            dropout=0.0, \n",
     "                                                                            recurrent_dropout=0.0,\n",
-    "                                                                            return_state=True,\n",
     "                                                                            unroll=False)(encoder_embedding_layer)\n",
     "    encoder_states = [encoder_hidden_states, encoder_cell_states]\n",
     "    \n",
@@ -1662,7 +1662,7 @@
     "    repeated_null = RepeatVector(Y_seq_len)(null_input)\n",
     "    \n",
     "    # Create the decoder LSTM (feed it with the memory of the encoder network). Call it `decoder_layer`\n",
-    "    decoder_layer = LSTM(hidden_dim, \n",
+    "    decoder_layer = LSTM(hidden_dim, return_sequences=True,\n",
     "                        activation='tanh',\n",
     "                        recurrent_activation='hard_sigmoid',\n",
     "                        kernel_regularizer=None,\n",
@@ -1674,7 +1674,6 @@
     "                        bias_constraint=None,\n",
     "                        dropout=0.0, \n",
     "                        recurrent_dropout=0.0,\n",
-    "                        return_sequences=True,\n",
     "                        unroll=False)(repeated_null, initial_state=encoder_states)\n",
     "    \n",
     "    # Add a fully connected layer and a softmax to the outputs of the decoder\n",
@@ -1717,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1732,17 +1731,12 @@
    },
    "outputs": [
     {
-     "ename": "MemoryError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-23dba48f8c3a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mvalidation_percentage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_onehot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidation_percentage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Computing inputs for `create_model`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36mtrain_test_split\u001b[0;34m(*arrays, **options)\u001b[0m\n\u001b[1;32m   2057\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2058\u001b[0m     return list(chain.from_iterable((safe_indexing(a, train),\n\u001b[0;32m-> 2059\u001b[0;31m                                      safe_indexing(a, test)) for a in arrays))\n\u001b[0m\u001b[1;32m   2060\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2061\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/sklearn/model_selection/_split.py\u001b[0m in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m   2057\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2058\u001b[0m     return list(chain.from_iterable((safe_indexing(a, train),\n\u001b[0;32m-> 2059\u001b[0;31m                                      safe_indexing(a, test)) for a in arrays))\n\u001b[0m\u001b[1;32m   2060\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2061\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.5/dist-packages/sklearn/utils/__init__.py\u001b[0m in \u001b[0;36msafe_indexing\u001b[0;34m(X, indices)\u001b[0m\n\u001b[1;32m    158\u001b[0m                                    indices.dtype.kind == 'i'):\n\u001b[1;32m    159\u001b[0m             \u001b[0;31m# This is often substantially faster than X[indices]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 160\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindices\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    161\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindices\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mMemoryError\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 18357 samples, validate on 4590 samples\n",
+      "Epoch 1/1\n",
+      "18357/18357 [==============================] - 562s 31ms/step - loss: 6.4572 - categorical_accuracy: 0.1692 - val_loss: 5.4938 - val_categorical_accuracy: 0.1703\n"
      ]
     }
    ],
@@ -1758,20 +1752,20 @@
     "X_seq_len = len(X[0])\n",
     "Y_seq_len = Y_onehot.shape[1]\n",
     "\n",
-    "hidden_dim = 256\n",
-    "embedding_dim = 1024\n",
-    "n_epochs = 10\n",
-    "batch_size = 256\n",
+    "hidden_dim = 2\n",
+    "embedding_dim = 2\n",
+    "n_epochs = 1\n",
+    "batch_size = 8\n",
     "\n",
     "# Create the model\n",
     "model = create_model(input_n, X_seq_len, output_n, Y_seq_len, hidden_dim, embedding_dim)\n",
     "\n",
     "# Train the model (note that you should feed both the input sentence and a zero array with the correct shape to\n",
     "# the `fit` method).\n",
-    "training_history = model.fit(X_train, y_train,\n",
+    "training_history = model.fit([X_train, np.zeros((X_train.shape[0], 1), dtype=bool)], y_train,\n",
     "                             epochs=n_epochs,\n",
     "                             batch_size=batch_size,\n",
-    "                             validation_data=(X_val, y_val)\n",
+    "                             validation_data=([X_val, np.zeros((X_val.shape[0], 1), dtype=bool)], y_val)\n",
     "                             )\n",
     "\n",
     "model.save_weights('seq2seq_model_correct.hdf5')\n",
