--- a/HA2.ipynb
+++ b/HA2.ipynb
@@ -33,13 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "GROUP = \"\"\n",
-    "NAME1 = \"\"\n",
-    "NAME2 = \"\""
+    "GROUP = \"68\"\n",
+    "NAME1 = \"Lukas Mericle\"\n",
+    "NAME2 = \"Nickey Lizbat Lawrence\""
    ]
   },
   {
@@ -52,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import IPython\n",
@@ -146,6 +150,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -189,6 +194,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -234,6 +240,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -387,6 +394,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "nbgrader": {
      "checksum": "0ab240474adc0f910903ac2a9321bb6b",
@@ -459,6 +467,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -499,6 +508,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "nbgrader": {
      "checksum": "0c3a5e91dfe32670754498a08282ad6f",
@@ -573,6 +583,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -655,6 +666,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "nbgrader": {
      "checksum": "9c01e4f1d6658f6c2bf47727319ccef0",
@@ -728,6 +740,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -768,6 +781,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "nbgrader": {
      "checksum": "02925c28cb85c2167afded8f143c7dee",
@@ -817,6 +831,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -856,6 +871,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -968,7 +984,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rnn = SimpleRNN(len(chars), 500, len(chars))\n",
@@ -1024,6 +1042,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -1142,6 +1161,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -1288,6 +1308,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -1340,6 +1361,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -1384,6 +1406,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -1537,6 +1560,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -1601,6 +1625,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "nbgrader": {
      "checksum": "0d52b0195834f0be18715584290ff3e7",
@@ -1928,6 +1953,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "nbgrader": {
      "checksum": "552a75386c2d6110b5331dada6f9c689",
@@ -1969,6 +1995,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -1989,7 +2016,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# test for yourself\n",
@@ -1999,7 +2028,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(translate('she love apples .'))"
@@ -2008,7 +2039,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(translate('he opened the window .'))"
@@ -2017,7 +2050,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(translate('this is working well .'))"
@@ -2026,7 +2061,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(translate('i am a great student .'))"
@@ -2090,7 +2127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
